--- a/Resume-FlexDraft.html
+++ b/Resume-FlexDraft.html
@@ -169,6 +169,7 @@
                         <button id="contactButton">Read the Article</button></a> 
                 </div>   
                 <div class="col">
+                    <h3> Fentenyl Awareness Town Hall </h3>
                     <img src="speaking.JPG" alt="Sierra speaking" style="width: 200px; height: auto; padding-left: 30%;">
                     <head>
                         <meta charset="UTF-8">
